[gd_scene load_steps=9 format=2]

[ext_resource path="res://enemies/enemy_lv1.gd" type="Script" id=1]
[ext_resource path="res://enemies/enemyHP.tscn" type="PackedScene" id=2]
[ext_resource path="res://particles/Prizes/prize.tscn" type="PackedScene" id=3]
[ext_resource path="res://particles/Effects/smoke.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/icons/dangerSprite.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 30.0
height = 25.0
_sections_unfolded = [ "Resource" ]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 200.0

[sub_resource type="Animation" id=3]

resource_name = "dead"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("smoke:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("smoke:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[node name="enemy_level1" type="KinematicBody2D"]

light_mask = 2
input_pickable = false
collision_layer = 4
collision_mask = 3
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Material", "Transform", "Visibility", "collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

light_mask = 2
shape = SubResource( 1 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="Area2D" type="Area2D" parent="." index="1"]

light_mask = 2
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform", "Visibility", "Z Index" ]

[node name="detectZone" type="CollisionShape2D" parent="Area2D" index="0"]

shape = SubResource( 2 )

[node name="FlipTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="lifeBarContainer" parent="." index="3" instance=ExtResource( 2 )]

margin_left = -36.0
margin_top = -55.0
margin_right = 4.0
margin_bottom = -15.0
rect_scale = Vector2( 0.5, 0.5 )
_sections_unfolded = [ "Rect" ]

[node name="prize" parent="." index="4" instance=ExtResource( 3 )]

position = Vector2( -0.0643616, -0.242477 )

[node name="AttackWaitTime" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[node name="smoke" parent="." index="6" instance=ExtResource( 4 )]

visible = false
modulate = Color( 1, 1, 1, 0.320431 )
position = Vector2( 25, 0 )
one_shot = true
_sections_unfolded = [ "Material", "Process Material", "Textures", "Time", "Transform", "Visibility" ]

[node name="Anim" type="AnimationPlayer" parent="." index="7"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/dead = SubResource( 3 )
blend_times = [  ]

[node name="AttackIcon" type="Sprite" parent="." index="8"]

position = Vector2( 2.86789, -78.5088 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]


